--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <p id='HamzasText'>
         Test. I updated this, and this will be visible in your fork to sync.
+        This is a line of text.
     </p>
     <p id="demo"></p>
     <script>
